--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorError">@android:color/holo_red_dark</color>
 
     <color name="black">#000000</color>
+    <color name="blocking_view">#50000000</color>
+    <color name="transparent">@android:color/transparent</color>
 </resources>
