--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -18,16 +18,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            app:hintTextColor="@color/colorPrimary">
+            android:theme="@style/AppTheme.InputFieldContainer">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/login_username_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/login_username_input_hint"
-                android:textColor="@color/black"
-                android:textColorHint="@color/colorPrimaryDark"
-                android:textSize="18sp" />
+                android:theme="@style/AppTheme.InputField" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -35,8 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            app:hintTextColor="@color/colorPrimary"
-            app:passwordToggleEnabled="true">
+            app:passwordToggleEnabled="true"
+            android:theme="@style/AppTheme.InputFieldContainer">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/login_password_input"
@@ -44,9 +42,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/login_password_input_hint"
                 android:inputType="textPassword"
-                android:textColor="@color/black"
-                android:textColorHint="@color/colorPrimaryDark"
-                android:textSize="18sp" />
+                android:theme="@style/AppTheme.InputField" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -54,9 +50,34 @@
             android:id="@+id/login_submit_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
             android:text="@string/login_submit_button_text"
-            android:textSize="18sp" />
+            android:theme="@style/AppTheme.Button" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/login_register"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="start"
+                android:text="@string/login_register_link"
+                android:theme="@style/AppLink" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/login_forgot_password"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="@string/login_forgot_password_link"
+                android:theme="@style/AppLink" />
+        </LinearLayout>
     </LinearLayout>
 
     <FrameLayout
