--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
 
     <color name="black">#000000</color>
     <color name="blocking_view">#50000000</color>
+    <color name="white">#ffffff</color>
     <color name="transparent">@android:color/transparent</color>
 </resources>
